# pyprep

./: .codecov.yml  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .pydocstyle.ini  .readthedocs.yml  .travis.yml  .zenodo.json  CITATION.cff  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  requirements2.txt  setup.cfg  setup.py  versioneer.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cffconvert.yml  matprep_artifacts.yml  python_build.yml  python_publish.yml  python_tests.yml  pythonpackage.yml  release.yml
docs/: Makefile  api.rst  authors.rst  changelog.rst  conf.py  examples.rst  index.rst  matlab_differences.rst  whats_new.rst
docs/_static/: style.css
docs/_templates/: layout.html
docs/source/: conf.py  examples.rst  index.rst  modules.rst  pyprep.rst  whats_new.rst
docs/sphinxext/: gh_substitutions.py
examples/: README.rst  prep_demo.ipynb  prep_demo.py  ransac_compare.py  ransac_comparison_autoreject.py  run_full_prep.py  run_prep_in_stages.py  run_ransac.py  use_noisy_module.py
examples/Matlab results/: EEG_raw.mat
examples/test_data/: S001R01.edf  S001R03.edf  S001R04.edf  S002R01.edf  S004R01.edf
pyprep/: __init__.py  _version.py  class_noisy.py  find_noisy_channels.py  noisy.py  prep_pipeline.py  ransac.py  reference.py  removeTrend.py  test_find_noisy_channels.py  test_removeTrend.py  utilities.py  utils.py
pyprep/tests/: test_matprep_compare.py  test_prep_pipeline.py  test_reference.py  test_removeTrend.py  test_utils.py
test/: conftest.py  test_find_noisy_channels.py  test_noisy.py  test_prep_pipeline.py  test_reference.py  test_removeTrend.py  test_reref.py
test/test_data/: S001R02.edf  S003R01.edf
tests/: __init__.py  conftest.py  test_find_noisy_channels.py  test_matprep_compare.py  test_noisy.py  test_prep_pipeline.py  test_reference.py  test_removeTrend.py  test_utils.py
tools/matprep/: README.md  generate_artifacts.m
tools/matprep/config/: pipeline_setup.py  settings.m
