[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyprep"
description = "A Python implementation of the preprocessing pipeline (PREP) for EEG data."
dynamic = ["version"]
authors = [{ name = "The PyPREP developers" }]
maintainers = [
    { name = "Stefan Appelhoff", email = "stefan.appelhoff@mailbox.org" },
]
license = { file = "LICENSE" }
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.9"
keywords = [
    "EEG",
    "electroencephalography",
    "artifact",
    "preprocessing",
    "data",
    "neuroscience",
    "neuroimaging",
    "mne",
    "python",
]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.2",
    "scipy>=1.6.3",
    "mne>=1.3.0",
    "psutil>=5.4.3"
]

[project.optional-dependencies]
# Variants with dependencies that will get installed on top of those listed unter
# project.dependencies

# Dependencies for running the test infrastructure
test = [
    "build",
    "black",
    "flake8",
    "flake8-docstrings",
    "flake8-pyproject",
    "isort",
    "matplotlib",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pre-commit",
]

# Dependencies for building the documentation
doc = [
    "matplotlib",
    "sphinx>3",
    "sphinx_bootstrap_theme",
    "sphinx_gallery",
    "sphinx-copybutton",
]

# Dependencies for developer installations
dev = ["pyprep[test,doc]"]


[project.urls]
"Homepage" = "https://pyprep.readthedocs.io/en/latest"
"Bug Tracker" = "https://github.com/sappelhoff/pyprep/issues/"
"Documentation" = "https://pyprep.readthedocs.io/en/latest"
"Source Code" = "https://github.com/sappelhoff/pyprep"

[tool.hatch.metadata]
allow-direct-references = true # allow specifying URLs in our dependencies

[tool.hatch.build]
exclude = [
    "/.*",
    "**/tests",
    "/examples",
    "/docs",
    "/.github/**",
    "matprep_artifacts/**",
    "matprep_artifacts"
]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "release-branch-semver" }

[tool.coverage.run]
omit = ["*tests*"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = ["pragma: no cover", "if 0:", "if __name__ == .__main__.:"]

[tool.pytest.ini_options]
addopts = """pyprep/ --cov=pyprep/ --cov-report=xml --cov-config=pyproject.toml --verbose -s"""
filterwarnings = [
]

[tool.black]
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  matprep_artifacts
)
'''

[tool.isort]
profile="black"
skip_glob = [
    "examples/*",
    "matprep_artifacts/*",
]

[tool.flake8]
docstring-convention = "numpy"
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore = [
  # See https://github.com/PyCQA/pycodestyle/issues/373
  "E203",
]
exclude = [
  "*docs/_build/*",
  "*docs/auto_examples/*",
  "*build/lib*",
  "examples/",
  "*matprep_artifacts/*",
]
